assets/css/common.css
a.meanmenu-reveal {
	display: none;
}

/* when under viewport size, .mean-container is added to body */
.mean-container .mean-bar {
	float: left;
	width: 100%;
	position: relative;
	background: #0c1923;
	padding: 4px 0;
	min-height: 42px;
	z-index: 999999;
}

.mean-container a.meanmenu-reveal {
	width: 22px;
	height: 22px;
	padding: 13px 13px 11px 13px;
	position: absolute;
	top: 0;
	right: 0;
	cursor: pointer;
	color: #fff;
	text-decoration: none;
	font-size: 16px;
	text-indent: -9999em;
	line-height: 22px;
	font-size: 1px;
	display: block;
	font-family: Arial, Helvetica, sans-serif;
	font-weight: 700;
}

.mean-container a.meanmenu-reveal span {
	display: block;
	background: #fff;
	height: 3px;
	margin-top: 3px;
}

.mean-container .mean-nav {
	float: left;
	width: 100%;
	background: #0c1923;
	margin-top: 44px;
}

.mean-container .mean-nav ul {
	padding: 0;
	margin: 0;
	width: 100%;
	list-style-type: none;
}

.mean-container .mean-nav ul li {
	position: relative;
	float: left;
	width: 100%;
}

.mean-container .mean-nav ul li a {
	display: block;
	float: left;
	width: 90%;
	padding: 1em 5%;
	margin: 0;
	text-align: left;
	color: #fff;
	border-top: 1px solid #383838;
	border-top: 1px solid rgba(255,255,255,0.5);
	text-decoration: none;
	text-transform: uppercase;
}

.mean-container .mean-nav ul li li a {
	width: 80%;
	padding: 1em 10%;
	border-top: 1px solid #f1f1f1;
	border-top: 1px solid rgba(255,255,255,0.25);
	opacity: 0.75;
	filter: alpha(opacity=75);
	text-shadow: none !important;
	visibility: visible;
}

.mean-container .mean-nav ul li.mean-last a {
	border-bottom: none;
	margin-bottom: 0;
}

.mean-container .mean-nav ul li li li a {
	width: 70%;
	padding: 1em 15%;
}

.mean-container .mean-nav ul li li li li a {
	width: 60%;
	padding: 1em 20%;
}

.mean-container .mean-nav ul li li li li li a {
	width: 50%;
	padding: 1em 25%;
}

.mean-container .mean-nav ul li a:hover {
	background: #252525;
	background: rgba(255,255,255,0.1);
}

.mean-container .mean-nav ul li a.mean-expand {
	margin-top: 1px;
	width: 26px;
	height: 32px;
	padding: 12px !important;
	text-align: center;
	position: absolute;
	right: 0;
	top: 0;
	z-index: 2;
	font-weight: 700;
	background: rgba(255,255,255,0.1);
	border: none !important;
	border-left: 1px solid rgba(255,255,255,0.4) !important;
	border-bottom: 1px solid rgba(255,255,255,0.2) !important;
}

.mean-container .mean-nav ul li a.mean-expand:hover {
	background: rgba(0,0,0,0.9);
}

.mean-container .mean-push {
	float: left;
	width: 100%;
	padding: 0;
	margin: 0;
	clear: both;
}

.mean-nav .wrapper {
	width: 100%;
	padding: 0;
	margin: 0;
}

/* Fix for box sizing on Foundation Framework etc. */
.mean-container .mean-bar, .mean-container .mean-bar * {
	-webkit-box-sizing: content-box;
	-moz-box-sizing: content-box;
	box-sizing: content-box;
}


.mean-remove {
	display: none !important;
}


@font-face {
  font-family: 'Source_Sans_Pro';
  src: url('/assets/fonts/Source_Sans_Pro/SourceSansPro-Regular.ttf'); 

}
@font-face {
  font-family: 'Merriweather';
  src: url('/assets/fonts/Merriweather/Merriweather-Regular.ttf'); 

}

html,button,input,select,textarea{
    font-family: "Source_Sans_Pro", "Georgia","Verdana","Trebuchet MS","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Tahoma,sans-serif;
}

h1, h2, h3, h4, h5{
  font-family: "Merriweather"
}


body{
    margin:0;
    padding:0;
    background-color: #ced4e0;
    color:#666666;
    line-height:24px;
}


hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #cbcbcb;
    margin: 1em 0;
}

select{
  width: 200px;
}

table {
    border-collapse: collapse;
    width: 100%;
border: 1px solid gray;
}

thead, td {
    text-align: left;
    padding: 8px;
}

tbody tr:nth-child(even){background-color: #f2f2f2}
tbody tr:nth-child(odd){background-color: #ccc}

thead {
    background-color: rgb(0,148,157);
    color: white;
}

/* anchor tag hacks */

h1:before { 
  display: block; 
  content: " "; 
  margin-top: -50px; 
  height: 50px; 
  visibility: hidden; 
}


h2:before { 
  display: block; 
  content: " "; 
  margin-top: -50px; 
  height: 50px; 
  visibility: hidden; 
}


h3:before { 
  display: block; 
  content: " "; 
  margin-top: -50px; 
  height: 50px; 
  visibility: hidden; 
}


h4:before { 
  display: block; 
  content: " "; 
  margin-top: -50px; 
  height: 50px; 
  visibility: hidden; 
}


h5:before { 
  display: block; 
  content: " "; 
  margin-top: -50px; 
  height: 50px; 
  visibility: hidden; 
}

button {
    border: 0px;
}




#logo {
    margin-top:12px;
    margin-left:12px;
    margin-bottom:5px;

}

#top-bar-wrapper {
    background-color:#373f51;
    clear: both!important;
    overflow: auto;
    height: 53px;
}

#top-bar-left {
    float: left;
}

#top-bar-left a, #top-bar-left img {
    border: none;
    text-decoration: none;
}

#top-bar-right {
    float: right;
    margin-top: 6px;
    width: 297px;
}

#gtranslate-wrapper{
    position:relative;
    float:right;
    margin-right:20px;
    margin-top:7px;
    margin-bottom: 7px;
    font-size:0.85714em;
}

#gtranslate-wrapper .translate-toggle{
    display:block;
    cursor:pointer;
    font-weight:bold;
    background-color:#bad0e7;
    height:26px;
    padding-left:10px;
    padding-right:10px;
}

#gtranslate-wrapper .translate-toggle:hover{
    opacity:0.8;
    filter:alpha(opacity=80);
}

#gtranslate-wrapper .translate-visible .translate-toggle:hover{
    opacity:1;
    filter:alpha(opacity=100);

}

#gtranslate-wrapper .translate-content{
    display:none;
    width:180px;
    z-index:90;
    background-color:#bad0e7;
    padding:10px;
    margin-top: 2px;
    margin-right: 20px;
}

#gtranslate-wrapper .translate-content .gtflag{
    width:16px;
    height:16px;
    float:right;
    margin:4px 3px;
    display:block;
    position:relative;
    z-index:95;
}



@media screen and (min-width: 785px) {
  
#page-wrapper{
    margin: 0 auto;
    width: 100%;
    max-width: 1010px;
    padding: 14px 0;
    background-color: #ffffff;
}

#page-wrapper-inner {
    padding: 1.42857em;
    margin: 0 auto;
    max-width: 942px;
    background-color:#efefef;
}
  
      }
      

@media screen and (max-width: 784px) {
  
#page-wrapper{
    width: 100%;
    max-width: 100%;
    padding: 0px;
    background-color: #ffffff;
}

#page-wrapper-inner {
    padding: 6px;
    max-width: 100%;
    background-color:#efefef;
}
  
  p {
    margin-right:10px;
  }
      }

#site-name{
    text-indent:-5000px;
    overflow:hidden;
    height:0;
    margin:0;
}

#site-name a{
    text-indent:-5000px;
    overflow:hidden;
    display:block;
    height:0;
    margin:0;
}



@media screen and (max-width: 784px) {
  
  #coloradolegal{
  display: block;
  float: left;
  margin-left: 0px;
  margin-bottom: 10px;
}

  
    #aboutleft{
    display: block;
    float: left;
    margin-left: 0px;
    margin-right: 10px;
  }  
  
  #aboutright{
    display: block;
    float: right;
    margin-left: 10px;
    margin-right: 0px;
  }
  
  
}


@media screen and (min-width: 785px) {
  
  #coloradolegal{
  display: block;
  float: left;
  margin-left: 20px;
  margin-bottom: 20px;
}

  
    #aboutleft{
    display: inline-block;
    float: left;
    margin-left: 20px;
        padding-bottom: 20px;
  }  
  
  #aboutright{
    display: inline-block;
    float: right;
    margin-right: 20px;
      padding-bottom: 20px;
  }
  
  
}






@media screen and (max-width: 784px) {
    #top-bar-right {
        float: right;
    }
 
}



@media screen and (min-width: 785px) {
  
    #aboutleft{
    display: inline-block;
    float: left;
    margin-left: 20px;
        padding-bottom: 20px;
  }  
  
  #aboutright{
    display: inline-block;
    float: right;
    margin-right: 20px;
      padding-bottom: 20px;
  }
  
  
    #top-navigation-wrapper{
        background-color: #21201e;
        height: 48px;
    }

    #top-navigation-list {
        margin: 0;
        padding: 0;
        padding-left: 4px;
        height: 48px;
        background-color: #21201e;
    }

    #top-navigation-list li{
        border: none;
        display: inline;
    }

    #top-navigation-list li a{
        position: relative;
        color: #c3c1c1;
        background-color: #21201e; 
        font-size:16px;
        text-decoration:none;
        border:none;
        top: 12px;
        padding-top: 13px;
        padding-bottom: 13px;
        border-right: 1px solid #454444;
    }

    #top-navigation-list li.padding-extra a {
        padding-left: 16px;
        padding-right: 28px;
    }

    #top-navigation-list li.padding-normal a {
        padding-left: 12px;
        padding-right: 12px;
    }

    #top-navigation-list li:last-child a {
        border-right: none;
    }

    #top-navigation-list li a:visited{
        color:#c3c1c1;
    }

    #top-navigation-list li a:active, #top-navigation-list li a.active, #top-navigation-list li a:hover{
        background-color:#21201e;
        color:#fff;
    }
}

#banner {
    max-width: 100%;
  height: 148px;
}

#main-content a {
    color:#0062A0;
    text-decoration: none;
}

#main-content a:active, #main-content a:hover,#main-content a:focus,
#footer a:active, #footer a:hover, #footer a:focus {
    color:#3e3e3e;
    text-decoration:underline;
}

#footer {
    max-width: 1008px;
    margin: 0 auto;
    font-size: 0.85714em;
    padding: 20px;
}

#footer a{
    text-decoration:none;
    color:#570104;
}

#footer ul, #footer p {
    margin: 0;
    padding-left: 20px;    
}

#footer ul li{
    display: inline;
    padding-right: 6px;
}

#footer p {
    padding-top: 14px;
    padding-bottom: 13px;
}


.container-inline div,.container-inline label{
    display: inline;
}

.container-inline .fieldset-wrapper{
    display: block;
}

.element-invisible {
    position:absolute!important;
    clip:rect(1px,1px,1px,1px);
    overflow:hidden;
    height:1px;
}

